Closed
Bug 748997
Opened 13 years ago
Closed 13 years ago
New mail notification issue since upgrading to TB12
Categories
(MailNews Core :: Networking: POP, defect)
Tracking
(thunderbird12 fixed, thunderbird13+ fixed, thunderbird14 fixed)
RESOLVED
FIXED
Thunderbird 15.0
People
(Reporter: digger, Assigned: Bienvenu)
References
()
Details
(Keywords: regression, Whiteboard: [gs][Fixed in 12.0.1])
Attachments
(1 file)
1.51 KB,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
standard8
:
approval-comm-release+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:12.0) Gecko/20100101 Firefox/12.0
Build ID: 20120420145725
Steps to reproduce:
The following issue is happening on multiple computers. All computers are running Windows 7, though the editions are different, and while most are 64-bit, one is 32-bit. But all Windows are SP1 and fully updated.
Each computer had Thunderbird 11.0.1 installed prior to being updated to 12.0. Currently, each computer has 12.0 now installed.
If I receive mail to an account where the option is set to NOT delete it from the server unless the mail is deleted from the inbox, during the next automatic check of mail (currently set at 1 minute in my options), I get a NEW new-mail sound and notification in the system tray. This occurs no matter whether I left said piece of mail in the inbox or if I deleted it. A piece of mail is NOT marked as un-read in my inbox. It is simply the notification that occurs again.
Compacting did not solve the problem. I also disabled all add-ons, yet the problem reoccurred.
It should be noted that, at least from my tests, if I *manually* check for mail after receiving a mail at one of the accounts in question, the issue does not seem to occur. It is only with the *automatic* check that happens one minute after the initial download.
Expected results:
No new mail notification should have occurred unless there was actually a new piece of mail.
Numerous confirming reports on MozillaZine (see link above), apparently only POP accounts are affected as I'm unable to reproduce this with my IMAP accounts.
One other piece of information I noticed that might be helpful: I have some filters set up on the account in question. These filters delete mail on the server that comes from one specific email address, even though I have the application option set for it to "not delete mail on sever unless deleted from inbox." I've noticed when I receive mail from the specific email address where the filter goes into effect, the issue does NOT occur.
Comment 3•13 years ago
|
||
I don't have a TB12 handy for testing at the moment.
Testing with Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20120424 Thunderbird/14.0a1 ID:20120424030426 and using the same setting, I get a similar result.(no filters in use)
STR:
Pop3 account server settings:
Check for new at startup
Check every 1 min
Automatically download new messages
Leave messages on server
Until I delete them
I'm not actually getting a notification, but until the message is "read" that message seems to be re-downloaded every minute of the check interval.
The activity manager, (as well as my firewall) shows that message repeatedly downloaded every minute. Until I read that message OR the message is deleted at the server (by another system accessing/deleting that message.
So even though I'm not seeing a Biff notification, the symptoms are similar enough for me to confirm this bug.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Possibly related to bug 736539 or triggered by a similar cause?
Thus far, two reporters have confirmed using POP accounts.
Keywords: regression,
regressionwindow-wanted
Comment 5•13 years ago
|
||
(In reply to rsx11m from comment #4)
> Possibly related to bug 736539 or triggered by a similar cause?
> Thus far, two reporters have confirmed using POP accounts.
I don't think it's related to that bug.
I use "leave messages on server" for pop3 daily, and haven't had a problem.
But in that case, I don't use a periodic check for new mail.
Might be related to the Pluggable stores checkin way back on 12/24/11
since this is not a common use case.
(I did rebuild my MSF files just in case..no diff
I'm also seeing this. I'm using POP accounts, and don't have any filters set up.
Sorry, forgot to add that I get the notification even if there aren't any unread messages in my inbox.
This bug reproducible when used "Get Mail" button that checks mail in all accounts, not only on automatic scheduled check.
There are two ways stop the bug from happening:
1) restart TB
2) check new mail manually on the POP3 account that getting this notification.
Restarting TB isn't an option, as the bug just happens again. I've restarted TB a few times, and still have this bug.
Sure we can check manually, but then we can do lots of things manually. One of the main benefits of computers is that they do things for us, so we don't need to. This isn't really an acceptable solution.
Thanks
Comment 10•13 years ago
|
||
That wasn't proposed as solution, just a work around until the bug is fixed.
Restart TB worked on two computers for me though.
It seems this bug is not consistent. Just now I received new mail, after read it I pressed check all mail and didn't receive any dud notifications...
Component: General → Networking: POP
Product: Thunderbird → MailNews Core
QA Contact: general → networking.pop
![]() |
||
Comment 11•13 years ago
|
||
Various reports with differing scenarios now on GetSatisfaction as well, see https://getsatisfaction.com/mozilla_messaging/tags/bug_748997 for reference.
Whiteboard: [gs]
Comment 12•13 years ago
|
||
I am seeing the same bug. A work around for me is to click on any folder in Thunderbird other than my Inbox and the false notification goes away.
Also, if I manually check for new messages after I have received an automatically downloaded message, I don't get the false notification.
![]() |
||
Comment 13•13 years ago
|
||
(In reply to Joe Sabash from comment #3)
> Leave messages on server > Until I delete them
One reporter in http://gsfn.us/t/2tat1#reply_8734283 states using "leave on server for 30 days" rather than indefinitely. I'm increasing the severity of this bug given the considerable number of user reports and that these false notifications render the mail biff for POP accounts basically useless.
Severity: normal → major
tracking-thunderbird13:
--- → ?
![]() |
||
Comment 14•13 years ago
|
||
Another report in http://gsfn.us/t/2tato#reply_8734467 stating:
> When I delete from inbox, upon the next server inquiry the message is deleted
> from the server. For some reason this is causing the additional new mail alert
> when in fact there is no new mail!
Comment 15•13 years ago
|
||
Here is another work around that may help whoever fixes this: after I receive a message (doesn't have to automatically downloaded BTW), if I leave Thunderbird on a folder other than the Inbox, I do not get the false notification.
That is to say, I only get the false notification when Thunderbird is looking at the Inbox. If I am looking at any other folder during the next automatic mail check, it doesn't happen.
![]() |
||
Comment 17•13 years ago
|
||
Looks related but not exactly the same as the icon stays even after reading a new message:
(Quoting Zodwatches from bug 749282)
> When a new message comes into Thunderbird v12, Windoze 7 puts a new message
> icon in the SysTray. When you go in and read that message in Thunderbird,
> the message is now marked as read in Thunderbird BUT the Windoze new message
> icon in the SysTray does not go away.
POP3, leave the messages on the server for up to 7 days
Comment 18•13 years ago
|
||
I'm having the same problem. I get 3 extra false notifications for each new incoming email message (POP) even after I've read the new email. I can clear the notification icon by marking the last email received as Unread, then Read, but then I'll get the next false notification.
Other factors:
I usually get the notification the same time as receiving a new email. Now the notification is delayed a few seconds.
I don't get extra notifications if I leave the email as Unread.
TB12
Windows XP SP3
Leave messages on server until I delete them.
Assignee | ||
Comment 19•13 years ago
|
||
I'm not seeing the extra notifications, but I do see the activity mgr claiming to do downloads that aren't happening, iiuc.
Comment 20•13 years ago
|
||
(In reply to David :Bienvenu from comment #19)
> I'm not seeing the extra notifications, but I do see the activity mgr
> claiming to do downloads that aren't happening, iiuc.
That stops if the last message is no longer on the server.(by accessing from another pc)
Regression range:
No problem:
Mozilla/5.0 (Windows NT 5.1; rv:12.0a1) Gecko/20111224 Thunderbird/12.0a1
Symptoms seen:
Mozilla/5.0 (Windows NT 5.1; rv:12.0a1) Gecko/20111225 Thunderbird/12.0a1
Assignee | ||
Comment 21•13 years ago
|
||
(In reply to Joe Sabash from comment #20)
> (In reply to David :Bienvenu from comment #19)
> > I'm not seeing the extra notifications, but I do see the activity mgr
> > claiming to do downloads that aren't happening, iiuc.
>
> That stops if the last message is no longer on the server.(by accessing from
> another pc)
yeah, I think that's really not the salient fact - the problem seems to be that the num new messages count isn't getting cleared in this situation. Deleting the message reduces that count. Reading the message also fixes the issue for me.
![]() |
||
Comment 22•13 years ago
|
||
http://hg.mozilla.org/comm-central/pushloghtml?startdate=2011-12-24+00%3A00+&enddate=2011-12-25+03%3A00
Looks like bug 402392 is a good candidate (add support for pluggable stores).
Assignee | ||
Comment 23•13 years ago
|
||
oh, definitely. But that changed almost everything about the way mail is handled that it's not super helpful in pin-pointing the actual code change that caused the bug :-(
Blocks: 402392
Keywords: regressionwindow-wanted
Comment 24•13 years ago
|
||
Win7 x64 tb12
I have over 12 pop accounts in TB all set to leave mail on server (for webmail access)....with regular polling.
I basically have phantom "new mail" notifications every minute which is driving me crazy. Have not found any way to stop it...such as leaving a "non inbox" folder highlighted.
Comment 25•13 years ago
|
||
Same problem here. It's quite annoying. I would suggest especially @Red (has 12 pop accounts!) to downgrade to ESR for now. (http://www.mozilla.org/en-US/thunderbird/organizations/) I'm doing the same here.
Assignee | ||
Comment 26•13 years ago
|
||
this moves the code that initializes the num new messages count in the pop3 sink back to BeginMailDelivery, where it was before the pluggable store work. BeginMailDelivery gets called once per get new mail action; IncorporateBegin gets called for every message downloaded. This fixes the activity mgr issue where it says we're downloading a new message on every check for new mail. I haven't seen the other issues described in this and the related bugs, but I can certainly believe that the new count was getting off, which could cause a bunch of different issues. I'll request a comm-release try server build with this patch and put a link to it in this bug.
Assignee | ||
Comment 27•13 years ago
|
||
try server builds will show up here - http://ftp.mozilla.org/pub/mozilla.org/thunderbird/try-builds/bienvenu@nventure.com-e11f8fd903d8
Assignee | ||
Comment 29•13 years ago
|
||
try server builds should be up now - these are essentially 12.0 builds with a two line change to try to fix this bug, so if you're seeing this or related new mail notification issues, it would be very helpful if you could try these try builds and report back, thx!
Comment 30•13 years ago
|
||
OK, I'm probably not the best person to test this, as I was never able to reproduce the repetitive notification. But the symptoms that I did see (activity manager claiming downloads) is gone with the try build.
I think we really need someone who was seeing the notifications to test further.
Come on folks, it's easy to complain, but not so easy to make an effort to test.
BTW that try build shows branding for "earlybird" but is really:
Mozilla/5.0 (Windows NT 5.1; rv:12.0) Gecko/20120427 Thunderbird/12.0 ID:20120427074635
Don't let that though you off.
Comment 31•13 years ago
|
||
That did put me off....as this is a production machine. Is this a fresh install or did it pick up all the accounts (I have 12+)...or do I need to use mozbackup?
With all these acounts I see it all the time.
rd
Assignee | ||
Comment 32•13 years ago
|
||
(In reply to Red from comment #31)
> That did put me off....as this is a production machine. Is this a fresh
> install or did it pick up all the accounts (I have 12+)...or do I need to
> use mozbackup?
You should always backup your mail. But as I said in https://bugzilla.mozilla.org/show_bug.cgi?id=748997#c24, this is 12.0 with a two line change. You can install it in a separate directory from 12.0, but it will use your normal profile.
- David
![]() |
||
Comment 33•13 years ago
|
||
I'd always make a backup of a production profile first before trying anything. That ".exe" installer would remove your current 12.0 installation, or you can download the ".zip" file instead and unpack anywhere without installation (in which case it won't touch your 12.0 installation files and gives you more flexibility).
![]() |
||
Comment 34•13 years ago
|
||
(In reply to David :Bienvenu from comment #32)
> You can install it in a separate directory from 12.0,
Err, yes - a custom install with different location should work equally well, I find the ZIP versions easier to use for the purpose of testing.
Comment 35•13 years ago
|
||
I did a full backup and got as far as the installer this afternoon...just waiting for west coast clients to be done for the day and will give it a shot. Will report back.
rd
Comment 36•13 years ago
|
||
I just tested the server build. Seems to be working. The icon didn't show up a second time, after my test mail was downloaded and read.
Comment 37•13 years ago
|
||
I have been running the test build for an hour...only notifications where for real mail. No more false notifications which where near constant with the tb12 build.
rd
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #619027 -
Flags: review?(mbanner) → review+
Comment 39•13 years ago
|
||
Comment on attachment 619027 [details] [diff] [review]
proposed fix
[Triage Comment]
a=me for landing regression fix on branches.
Attachment #619027 -
Flags: approval-comm-release+
Attachment #619027 -
Flags: approval-comm-beta+
Attachment #619027 -
Flags: approval-comm-aurora+
Comment 40•13 years ago
|
||
Checked in:
https://hg.mozilla.org/comm-central/rev/8a7ac25a378a
https://hg.mozilla.org/releases/comm-aurora/rev/71ba878b81ce
https://hg.mozilla.org/releases/comm-beta/rev/bfb55a5be429
https://hg.mozilla.org/releases/comm-release/rev/dc7679cbae9b
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
status-thunderbird12:
--- → fixed
status-thunderbird13:
--- → fixed
status-thunderbird14:
--- → fixed
Resolution: --- → FIXED
Whiteboard: [gs] → [gs][Fixed in 12.0.1]
Target Milestone: --- → Thunderbird 15.0
Comment 41•13 years ago
|
||
Which update will include this fix? The whiteboard item says "Fixed in 12.0.1", but the Target milestone states "Thunderbird 15.0".
Assignee | ||
Comment 42•13 years ago
|
||
(In reply to antimatter from comment #41)
> Which update will include this fix? The whiteboard item says "Fixed in
> 12.0.1", but the Target milestone states "Thunderbird 15.0".
12.0.1, 13, 14, and 15 will all contain the fix.
Comment 46•13 years ago
|
||
I just updated release channel version to 12.0.1 and all is well. Thank you for getting this done.
cheers,
rd
Comment 48•13 years ago
|
||
Could someone confirm if this fix will be included in the next release of v13, please?
Comment 49•13 years ago
|
||
(In reply to PurKat from comment #48)
> Could someone confirm if this fix will be included in the next release of
> v13, please?
Yes, it will be.
Comment 50•13 years ago
|
||
12.0.1 has already been released with this fix.
Comment 51•13 years ago
|
||
Thanks, Mark.
@cscholti@gmail.com - yeah, I just upgraded from 12.0.1 so I knew it was fixed in that build.
Comment 52•13 years ago
|
||
Sorry for this unrelated post, but now that the bug is fixed, how do I turn off automatic monitoring (i.e. auto send messages to my email)?
Thanks
Comment 53•13 years ago
|
||
Never mind. Found it.
Comment 54•13 years ago
|
||
I just found this bug still in SM2.10b1 - shouldn't it be fixed here, too?
Comment 55•13 years ago
|
||
After some quiet weeks with SM2.11 and 2.12 the bug re-appeared with the beta of 2.13 (Gecko/20120923 ore one before, don't know exactly)...
I'm not sure if it is the same bug - should I file a new bugreport?
You need to log in
before you can comment on or make changes to this bug.
Description
•