Bug 748997 - New mail notification issue since upgrading to TB12. Move the num new message count initialization to the right place. r+a=Standard8